--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -8,7 +8,6 @@ bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
-
 ;resources.frontController.params.useDefaultControllerAlways = 1
 
 ;resources.frontController.basePath =  APPLICATION_PATH "/views/scripts"
@@ -29,8 +28,8 @@ smarty.compile_dir = APPLICATION_PATH "/smarty/templates_c"
 smarty.config_dir = APPLICATION_PATH "/configs"
 smarty.cache_dir = APPLICATION_PATH "/smarty/cache"
 smarty.caching = 0
-smarty.compile_check = true 
-smarty.cache_lifetime = 5 ; 4 hours
+smarty.compile_check = true
+smarty.cache_lifetime = 5
 smarty.left_delimiter = "{"
 smarty.right_delimiter = "}"
 
